<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSinglPl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:padding="30sp"
        android:text="@string/Welcometxt"
        android:textAlignment="center"
        android:textColor="@color/TxtColor"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layoutSinglPl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/Player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/editTxtColor"
        android:hint="@string/username"
        android:textColor="@color/editTxtColor"
        android:textColorHint="@color/editTxtColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layoutSinglPl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameTitle" />

    <TextView
        android:id="@+id/info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/Infousername"
        android:textAlignment="center"
        android:textColor="@color/TxtColor"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="@id/layoutSinglPl"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Player1Name"
        app:layout_constraintTop_toBottomOf="@id/gameTitle" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39sp"
        android:background="@color/btnBckGrColor"
        android:checked="false"
        android:text="@string/Startbtn"
        android:textColor="@color/TxtColor"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layoutSinglPl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Player1Name" />

</android.support.constraint.ConstraintLayout>
    </ScrollView>
