<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:padding="30sp"
        android:text="@string/Welcometxt"
        android:textAlignment="center"
        android:textColor="@color/TxtColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40sp"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/singleP_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/btnBckGrColor"
        android:onClick="singlePlayer"
        android:text="@string/SinglePBtn"
        android:textColor="@color/TxtColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/gameTitle"
        android:layout_marginTop="50sp"
        />

    <Button
        android:id="@+id/multiP_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_weight="1"
        android:background="@color/btnBckGrColor"
        android:onClick="multiPlayer"
        android:text="@string/MultiPBtn"
        android:textColor="@color/TxtColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singleP_btn" />

    <Button
        android:id="@+id/leaderB_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/btnBckGrColor"
        android:onClick="leaderBoard"
        android:text="@string/LeaderboardBtn"
        android:textColor="@color/TxtColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/multiP_btn"
        android:layout_marginTop="25sp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>